--- a/backend/.env.example
+++ b/backend/.env.example
@@ -15,3 +15,6 @@ CORS_ORIGIN=*
 # File Upload
 UPLOAD_DIR=../frontend/uploads
 MAX_FILE_SIZE=5242880
+
+# Public base URL (для upload.js)
+BASE_URL=http://192.168.0.121:3000
