Исправления для Render

--- a/backend/.env
+++ b/backend/.env
@@ -1,9 +1,9 @@
 # Database Configuration
-DB_HOST=localhost
+DB_HOST=dpg-d6c8t5fpm1nc73cdbpi0-a
 DB_PORT=5432
 DB_NAME=mafia_overlay
-DB_USER=postgres
-DB_PASSWORD=327576
+DB_USER=mafia_overlay_user
+DB_PASSWORD=BaC83J7UgrJdXAlZc51eSxBE3JCt8MSz
 
 # Server Configuration
 PORT=3000
